--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
