--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,11 @@ spring:
     hibernate:
       ddl-auto: update
     generate-ddl: true
+  quartz:
+    job-store-type: jdbc
+    jdbc:
+      initialize-schema: always
+    auto-startup: true
 springdoc:
   api-docs:
     enabled: true
@@ -15,6 +20,5 @@ springdoc:
     path: /swagger-ui.html
     disable-swagger-default-url: true
     display-request-duration: true
-  #packages-to-scan: cn.infocore.dbs.compare.controller
 server:
   port: 8080
